<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:background="@drawable/matrix_bg"
             android:stretchColumns="1">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/messaggio_login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff">
    </TextView>

    <TableRow>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/sq"
            android:textColor="#ffffff">
        </TextView>

        <EditText
            android:id="@+id/txtUname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:inputType="text"
            android:textColor="#000000"
            android:textCursorDrawable="@null">

        </EditText>
    </TableRow>


    <TableRow>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/codice"

            android:textColor="#ffffff">

        </TextView>

        <EditText
            android:id="@+id/txtPwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#ffffff"
            android:inputType="text"
            android:textColor="#000000"
            android:textCursorDrawable="@null">
        </EditText>
    </TableRow>


    <TableRow>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset">
        </Button>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/entra">
        </Button>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"/>

    </TableRow>

    <TableRow android:gravity="center">

        <TextView
            android:id="@+id/txtErrore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"/>
    </TableRow>
</TableLayout>

